--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <table border=1 align=left>
 <tr>
 <th>Dir name</th><th>Detail</th>
-<tr align=center><td align=center><a target="new" href="code/">experiment codes</a></td><td align=center>Python2 code for experiment</td>
-<tr align=center><td align=center><a target="new" href="report/">report</a></td><td align=center>Report included</td>
-<tr align=center><td align=center><a target="new" href="plot/">experiment plots for report</a></td><td align=center>Python2 code for 0L_System model</td>
+<tr align=center><td align=center><a target="new" href="code/">code</a></td><td align=center>Python2 code for experiment</td>
+<tr align=center><td align=center><a target="new" href="report/">report</a></td><td align=center>Report</td>
+<tr align=center><td align=center><a target="new" href="plot/">plot</a></td><td align=center>Experiment plots for report</td>
 
 </table>
 
