update readme and index

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 <th>File name</th><th>Detail</th>
 <tr align=center><td align=center><a target=_blank href="code/l_system.py">l_system.py</a></td><td align=center>Python2 code for 0L_System model</td>
 <tr align=center><td align=center><a target=_blank href="code/sample.txt">sample.txt</a></td><td align=center>Sample input for l_system.py</td>
-<tr align=center><td align=center><a target=_blank href="code/para_Lsystem_ex.py">para_Lsystem_ex.py</a></td><td align=center> Python2 code for Parametric 0L_System  </td>
+<tr align=center><td align=center><a target=_blank href="code/parametric_Lsystems.py">parametric_Lsystems.py</a></td><td align=center> Python2 code for Parametric 0L_System  </td>
+<tr align=center><td align=center><a target=_blank href="code/sample_input_parametric.txt">sample_input_parametric.txt</a></td><td align=center>Sample input for parametric_Lsystems.py</td>
 <tr align=center><td align=center><a target=_blank href="report/l-systems-simulation.pdf">l-systems-simulation.pdf</a></td><td align=center> Report "L-Systems: A Simulation of Plant Development" </td>
-
+<tr align=center><td align=center><a target=_blank href="README.md">README.md</a></td><td align=center> readme file </td>
 </table>
 
 
