--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-<h2 align=center>L-Systems: A Simulation of Plant Development</h2>
+<h2 align=center><a target=_blank href="https://github.com/calvinyhchen/CS275-project-L_System">L-Systems: A Simulation of Plant Development</a></h2>
 <h4 align=center>Daphne Chiou, Kevin Shih, Calvin Chen, Wesley Tzou</h4>
 <h5 align=center>   University of California, Los Angeles<br>
     Artificial Life for Computer Graphics and Vision</h5>
