add plot and abstract

--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 
 <html>
-<h2 align=center><a target=_blank href="https://github.com/calvinyhchen/CS275-project-L_System">L-Systems: A Simulation of Plant Development</a></h2>
+<h2 align=center>L-Systems: A Simulation of Plant Development</a></h2>
 <h4 align=center>Daphne Chiou, Kevin Shih, Calvin Chen, Wesley Tzou</h4>
 <h5 align=center>   University of California, Los Angeles<br>
     Artificial Life for Computer Graphics and Vision</h5>
+<h5 align=center>       Abstract</h5>
+<h5 align=left>
+L-systems, or Lindenmayer systems, are often used to create realistic looking artificial plants. An L-system contains a set of alphabets that can be used to generate strings and geometric structures , a set of production rules that expand each alpha-bet into longer string of alphabets, and an initial axiom from which to begin the process.
+In this project we aim to implement a parametric L-systems from scratch that is capable of generating realistic plant structures in 3D space and visualize them on 2D plane.</br>
+Keywords: L-system, plant, artificial life.</h5>
+
+<h5 align=center><img src="plot/a.png" width="20%" height="20%"/><img src="plot/b.png" width="20%" height="20%"/><img src="plot/c.png" width="20%" height="20%"/></h5>
 <BODY>
 
-<h3> Directory:</h3>
-<table border=1 align=left>
-<tr>
-<th>Dir name</th><th>Detail</th>
-<tr align=center><td align=center><a target="new" href="code/">code</a></td><td align=center>Python2 code for experiment</td>
-<tr align=center><td align=center><a target="new" href="report/">report</a></td><td align=center>Report</td>
-<tr align=center><td align=center><a target="new" href="plot/">plot</a></td><td align=center>Experiment plots for report</td>
 
-</table>
 
-</br></br></br></br></br>
+
 
 <h3>File listing:</h3>
 <table border=1 align=left>
@@ -29,8 +28,21 @@
 <tr align=center><td align=center><a target=_blank href="code/sample_input_parametric.txt">sample_input_parametric.txt</a></td><td align=center>Sample input for parametric_Lsystems.py</td>
 <tr align=center><td align=center><a target=_blank href="report/l-systems-simulation.pdf">l-systems-simulation.pdf</a></td><td align=center> Report "L-Systems: A Simulation of Plant Development" </td>
 <tr align=center><td align=center><a target=_blank href="README.md">README.md</a></td><td align=center> readme file </td>
+
 </table>
 
+</br></br></br></br></br></br></br></br></br></br>
+
+
+<h3> Directory:</h3>
+<table border=1 align=left>
+<tr>
+<th>Dir name</th><th>Detail</th>
+<tr align=center><td align=center><a target="new" href="code/">code</a></td><td align=center>Python2 code for experiment</td>
+<tr align=center><td align=center><a target="new" href="report/">report</a></td><td align=center>Report</td>
+<tr align=center><td align=center><a target="new" href="plot/">plot</a></td><td align=center>Experiment plots for report</td>
+
+</table>
 
 
 </BODY>
